--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -28,10 +28,7 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
+
 
 .title a:hover,
 .title a:focus,
@@ -43,6 +40,10 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  a {
+    color: #e437de;
+    text-decoration: none;
+  }
 }
 
 .title,
