Remove unnecessary code and refactor css folder struct

--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -6,11 +6,15 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+}
+
+body {
+  p {
+    color: green;
+  }
+  a {
+    color: red;
+  }
 }
